# wawa-edm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  release.sh
.claude/: launch.json
config/: settings.py  urls.py
core/: admin.py  admin_render.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_knowledge_emailtask.py  0003_emaildraft.py  0004_emaildraft_pain_points_alter_emaildraft_content.py  0005_contact_phone_contact_role.py  0006_contact_behavior_contact_priority.py  0007_contact_middle_name.py  0008_contact_gender.py  0009_alter_contact_email.py  0010_emaildraft_task.py  0011_company_website.py  0012_company_address.py  0013_emaildraft_subject.py  0014_remove_emaildraft_title.py  0015_knowledgetag_knowledge_tag.py  0016_remove_knowledge_tag_knowledge_tags.py  0017_alter_contact_first_name_alter_contact_last_name.py  0018_emaildraft_unique_emaildraft_contact_task_version.py  0019_emaildraft_knowledges.py  0020_contact_unique_contact_name_email_and_more.py  0021_remove_contact_unique_contact_non_empty_email_and_more.py  0022_contact_subscribed.py
core/models/: __init__.py  company.py  contact.py  email.py  knowledge.py
core/serializers/: __init__.py  company.py  contact.py  email.py  knowledge.py
core/tests/: helpers.py  test_contact_api.py  test_contact_constraints.py  test_email_draft_filters.py  test_email_draft_knowledges.py  test_email_draft_version_api.py  (+3 more)
(+9 files in other folders)
