[project]
name = "wawa-edm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "daphne>=4.2.2",
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.4",
    "whitenoise>=6.12.0",
]
